--- a/src/org/doconline/web/pathMenu.properties
+++ b/src/org/doconline/web/pathMenu.properties
@@ -1,85 +1,16 @@
-/* CodPages Team SIM */
-1001=/jsp/sim/display/sistema_de_inscripcion_a_materias.jsp
-1002=/jsp/sim/abmc/inscribirse_a_materias.jsp
-1003=/jsp/sim/abmc/eliminar_materias_inscriptas.jsp
-1004=/jsp/sim/display/comprobante_de_inscripcion.jsp
+/* LOGIN */
+3000=/index.jsp
+3001=/jsp/login/logout.jsp
+3002=/jsp/login/validar_usuario.jsp
 
-/* SIF */
-2001=/jsp/sif/display/pantalla_bienvenida.jsp
-2002=/jsp/sif/display/consultar_inscripcion.jsp
-2003=/jsp/sif/display/cronograma_fechas.jsp
-2004=/jsp/sif/display/realizar_inscripcion2.jsp
-2005=/jsp/sif/display/tagGrillaFinalesAInscribir.jsp 
 
-/* SICNOD */
-3001=/jsp/sicnod/display/logout.jsp
-3002=/jsp/sicnod/display/validar_usuario.jsp
-3003=/jsp/sicnod/display/forgot_password.jsp
-3004=/jsp/sicnod/display/forgot_password_process.jsp
-3005=/jsp/sicnod/display/libro_actas.jsp
-3006=/jsp/sicnod/display/validar_usuario.jsp
-3007=/jsp/sicnod/display/mi_cuenta.jsp
-3008=/jsp/sicnod/display/cambiar_password.jsp
-3009=/jsp/sicnod/display/end_password_process.jsp
-3010=/jsp/sicnod/display/mi_cuenta_save.jsp
-3011=/jsp/sicnod/display/combo_materia.jsp
-3012=/jsp/sicnod/display/combo_turno.jsp
-3013=/jsp/sicnod/display/combo_lectivo.jsp
-3014=/jsp/sicnod/display/combo_fecha_examen.jsp
-3015=/jsp/sicnod/display/grilla_inscriptos.jsp
-3016=/jsp/sicnod/display/save_libro_acta.jsp
-3017=/jsp/sicnod/display/save_libro_acta_static.jsp
+/* EMPLEADO */
+4000=/jsp/empleado/index.jsp
 
-/* SICSA */
-4001=/jsp/sicsa/display/sicsa.jsp
-4002=/jsp/sicsa/display/peticiones.jsp
-4003=/jsp/sicsa/display/nuevaPeticion.php
-4004=/jsp/sicsa/display/verPeticion.php
-4005=/jsp/sicsa/abmc/peticiones.jsp
-4006=/jsp/sicsa/abmc/responderPeticion.jsp
-
-/* SAHOMCIL */
-5001=/jsp/sahomcil/display/despachador.jsp
-5002=/jsp/sahomcil/display/consulta.jsp
-5003=/jsp/sahomcil/display/combocurso.jsp
-5004=/jsp/sahomcil/display/cboturno.jsp
-5005=/jsp/sahomcil/display/tablahorariosCarga.jsp
-5006=/jsp/sahomcil/display/AgregarHorario.jsp
-5007=/jsp/sahomcil/abmc/altaHorario.jsp
-5009=/jsp/sahomcil/display/modalEliminar.jsp
-5010=/jsp/sahomcil/abmc/eliminarMateria.jsp
-5011=/jsp/sahomcil/display/tablahorarios.jsp
-
-/* wrapper */
-6000=/jsp/wrapper.jsp
-6001=/jsp/display/informativo/vision.jsp
-6002=/jsp/display/informativo/inscripcion.jsp
-6003=/jsp/display/informativo/profesores.jsp
-6004=/jsp/display/informativo/periodico.jsp
-6005=/jsp/display/informativo/normativa.jsp
-6006=/jsp/display/informativo/contacto.jsp
-6008=/jsp/display/informativo/alumnos.jsp
-6009=/jsp/display/carreras/administracion.jsp
-6010=/jsp/display/carreras/gastronomia.jsp
-6011=/jsp/display/carreras/textil.jsp
-6012=/jsp/display/carreras/mantenimiento.jsp
-6013=/jsp/display/carreras/sistemas.jsp
-6014=/jsp/display/carreras/turismo.jsp
-6015=/jsp/display/carreras/seguridad.jsp
-6016=/jsp/display/carreras/logistica.jsp
-6017=/jsp/display/carreras/programador.jsp
-6018=/jsp/display/carreras/robotica.jsp
-6019=/jsp/display/informativo/portada.jsp
+/* WRAPPER */
 6020=/jsp/wrapper.jsp
-6021=/jsp/adm/equivalencias.jsp
-6022=/jsp/adm/display.jsp
-6023=/jsp/adm/ingreso.jsp
-6024=/jsp/adm/displayIngreso.jsp
-6025=/jsp/adm/cerrar.jsp
-/*adm*/
-7001=/jsp/adm/display/alumnos.jsp
-
 
 /* errores */
 9505=/jsp/display/paginaError.jsp
 9404=/jsp/display/paginaNoEncontrada.jsp
+
