--- a/src/org/doconline/web/pathMenu.properties
+++ b/src/org/doconline/web/pathMenu.properties
@@ -1,14 +1,23 @@
+1000=/index.jsp
 /* LOGIN */
-3000=/index.jsp
+3000=/jsp/login/login.jsp
 3001=/jsp/login/logout.jsp
 3002=/jsp/login/validar_usuario.jsp
 
+/* ARCHIVO */
+4000=/jsp/archivo/subir_archivo.jsp
+4001=/jsp/archivo/borrar_archivo.jsp
+4002=/jsp/archivo/compartir_archivo.jsp
 
-/* EMPLEADO */
-4000=/jsp/empleado/index.jsp
+/* CARPETA */
+5000=/jsp/carpeta/crear_carpeta.jsp
+5001=/jsp/carpeta/borrar_carpeta.jsp
 
 /* WRAPPER */
 6020=/jsp/wrapper.jsp
+
+/* EMPLEADO */
+7000=/jsp/empleado/alta_empleado.jsp
 
 /* errores */
 9505=/jsp/display/paginaError.jsp
