--- a/src/org/doconline/web/pathMenu.properties
+++ b/src/org/doconline/web/pathMenu.properties
@@ -18,6 +18,7 @@
 
 /* EMPLEADO */
 7000=/jsp/empleado/alta_empleado.jsp
+7001=/jsp/empleado/baja_empleado.jsp
 
 /* errores */
 9505=/jsp/display/paginaError.jsp
